crates/picante/tests/ui/tracked_multiple_generics.stderr
error: picante: #[picante::tracked] currently supports exactly one type parameter (DB)
 --> tests/ui/tracked_multiple_generics.rs:1:1
  |
1 | #[picante::tracked]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `picante::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)
